# new-auwla

./: .gitignore  Cargo.toml  __runtime.js  app.aw  output.js  scan_log.txt
auwla-ast/: Cargo.toml
auwla-ast/src/: expr.rs  lib.rs  stmt.rs  types.rs
auwla-cli/: Cargo.toml
auwla-cli/src/: main.rs
auwla-codegen/: ARCHITECTURE.md  Cargo.toml
auwla-codegen/src/: emitter.rs  expr.rs  external.rs  lib.rs  match_logic.rs  pattern.rs  postprocess.rs  stmt.rs  try_logic.rs  writer.rs
auwla-error/: Cargo.toml
auwla-error/src/: lib.rs
auwla-lexer/: Cargo.toml
auwla-lexer/src/: lib.rs  token.rs
auwla-lsp/: Cargo.toml
auwla-lsp/src/: completion.rs  definition.rs  diagnostics.rs  hover.rs  main.rs  metadata.rs  utils.rs
auwla-parser/: Cargo.toml
auwla-parser/src/: expr.rs  lib.rs  stmt.rs  types.rs
auwla-typechecker/: Cargo.toml
auwla-typechecker/src/: checker.rs  expr.rs  lib.rs  module.rs  scope.rs  stmt.rs
output/: __util.js  auwla_metadata.json  test_self.js
output/std/: number.js
std/: array.aw  math.aw  number.aw  string.aw
std/output/: auwla_metadata.json
tests/: 01_implicit_returns.aw  02_arrays.aw  03_ranges.aw  04_interpolation.aw  05_try_operator.aw  06_match.aw  07_loops.aw  08_structs.aw  09_enums.aw  10_advanced_match.aw  11_struct_patterns.aw  12_closures.aw  13_extend.aw  14_generics.aw  15_extend_array.aw  16_external_attributes.aw  17_standalone_types.aw  18_extend_number.aw  19_inline_external.aw  interop.aw  leet.aw  personal.aw  todo.aw
tests/modules/: ext_provider.aw  main.aw  main_ext.aw  math.aw
tests/output/: 01_implicit_returns.js  02_arrays.js  03_ranges.js  04_interpolation.js  05_try_operator.js  06_match.js  07_loops.js  08_structs.js  09_enums.js  10_advanced_match.js  11_struct_patterns.js  12_closures.js  13_extend.js  14_generics.js  15_extend_array.js  16_external_attributes.js  17_standalone_types.js  18_extend_number.js  19_inline_external.js  __runtime.js  (+5 more)
vscode-auwla/: extension.js  language-configuration.json  package-lock.json  package.json
(+11 files in other folders)
