[package]
name = "auwla-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
auwla-ast = { version = "0.1.0", path = "../auwla-ast" }
auwla-lexer = { version = "0.1.0", path = "../auwla-lexer" }
auwla-parser = { version = "0.1.0", path = "../auwla-parser" }
auwla-typechecker = { version = "0.1.0", path = "../auwla-typechecker" }
