[package]
name = "auwla-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
auwla-ast = { version = "0.1.0", path = "../auwla-ast" }
auwla-lexer = { version = "0.1.0", path = "../auwla-lexer" }
auwla-parser = { version = "0.1.0", path = "../auwla-parser" }
auwla-typechecker = { version = "0.1.0", path = "../auwla-typechecker" }
auwla-codegen = { version = "0.1.0", path = "../auwla-codegen" }
auwla-error = { version = "0.1.0", path = "../auwla-error" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
