[package]
name = "auwla-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
auwla-ast = { path = "../auwla-ast" }
auwla-lexer = { path = "../auwla-lexer" }
auwla-parser = { path = "../auwla-parser" }
auwla-typechecker = { path = "../auwla-typechecker" }
dashmap = "5.5"
url = "2.4"
